<resources>
    <string name="app_name">神手抓娃娃</string>
    <string name="net_error">网络请求失败</string>
    <string name="device_error">机器出现故障</string>
    <string name="login_weixin">微信登录</string>
    <string name="network_error">请检查网络</string>
    <string name="data_error">数据异常</string>
    <string name="data_empty_error">请先选择数据</string>
    <string name="record_error">暂无该视频</string>
    <string name="about_us">关于我们</string>
    <string name="game_help">游戏帮助</string>
    <string name="yaoqing_me">邀请奖励</string>
    <string name="yaoqing_input">输入邀请码</string>
    <string name="feadback">问题反馈</string>
    <string name="logout">退出登录</string>
    <string name="setting">设置</string>
    <string name="userCenter">个人中心</string>
    <string name="message">消息通知</string>
    <string name="set_helps">游戏帮助</string>
    <string name="set_yaoqing">邀请奖励</string>
    <string name="set_yaoqingma">输入邀请码</string>
    <string name="set_bg_music">背景音乐</string>
    <string name="set_bg_yinxiao">背景音效</string>
    <string name="set_feedback">问题反馈</string>
    <string name="set_update">检查更新(1.0.2)</string>
    <string name="set_about">关于我们</string>
    <string name="coming">来了</string>
    <string name="agree">确定</string>
    <string name="disagree">取消</string>
    <string name="edit">编辑</string>
    <string name="shouhuo">收货地址</string>
    <string name="shouhuokong">暂未填写</string>
    <string name="shouhuoren">收货人</string>
    <string name="lianxifangshi">联系方式</string>
    <string name="keduihuan">可兑换金币</string>
    <string name="zhuaqu_record">抓取记录</string>
    <string name="jinbi_record">金币记录</string>
    <string name="jinbi_balance">金币余额</string>
    <string name="zhuazhong_num">抓中次数</string>
    <string name="charge_cneter">充值中心</string>
    <string name="send">发送</string>
    <string name="xieyi">用户协议与隐私条款</string>
    <string name="empty_tip">内容不能为空</string>
    <string name="mobile_tip">请填写正确的手机号</string>
    <string name="hint_text">说点什么吧</string>
    <string name="pay_way_select">请选择支付方式</string>
    <string name="my_balance">我的金币余额</string>
    <string name="pay_weixin">微信支付</string>
    <string name="pay_zfb">支付宝</string>
    <string name="game_coin">金币</string>
    <string name="tip_shoujia">售价</string>
    <string name="tip_yuan">元</string>
    <string name="check_all">全选</string>
    <string name="zq_all_num">总共抓住次数</string>
    <string name="playing">游戏中……</string>
    <string name="is_connecting">正在连接娃娃机……</string>
    <string name="play_no_tips">据说换个姿势，手气会更好</string>
    <string name="play_yes_tips">您的手气真的是太好了，运气爆棚啊</string>
    <string name="play_zhuazhu_tips">果真不负众望，真的抓到了！</string>
    <string name="play_meizhuazhu_tips">很遗憾，真的没抓到！</string>
    <string name="agora_appid">9a44530e5bce40eebb89daa4f07808f8</string>
</resources>
