<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shouhuoren"
            android:textSize="14sp"
            android:textColor="@color/colorIndexFont"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/window_shouhuoren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIndexFont"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lianxifangshi"
            android:textSize="14sp"
            android:textColor="@color/colorIndexFont"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/window_lianxifangshi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIndexFont"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shouhuo"
            android:textSize="14sp"
            android:textColor="@color/colorIndexFont"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/window_shouhuo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIndexFont"
            android:textSize="12sp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/window_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
</LinearLayout>