<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_bg"
    android:orientation="vertical">

    <include layout="@layout/charge_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/user_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:paddingLeft="14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:onClick="gamehelp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/set_help"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/set_helps"
                android:textColor="@color/colorIndexFont"
                android:textSize="12sp"
                android:id="@+id/textView" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/set_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:onClick="yaoqing">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/set_yaoqing"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/set_yaoqing"
                android:textColor="@color/colorIndexFont"
                android:textSize="12sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/colorDivider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:onClick="yaoqingma">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/set_yaoqingma"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/set_yaoqingma"
                android:textColor="@color/colorIndexFont"
                android:textSize="12sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/set_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/set_bg_music"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/set_bg_music"
                android:textColor="@color/colorIndexFont"
                android:textSize="12sp"/>
            <CheckBox
                android:id="@+id/checkbox_bgm"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:button="@null"
                android:background="@drawable/check_open"
                android:checked="true"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/colorDivider"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/set_bg_yx"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/set_bg_yinxiao"
                android:textColor="@color/colorIndexFont"
                android:textSize="12sp"/>
            <CheckBox
                android:id="@+id/checkbox_yinxiao"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:button="@null"
                android:checked="true"
                android:background="@drawable/check_open"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/set_divider"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/colorDivider"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:onClick="feedback">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/set_feedback"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/set_feedback"
                android:textColor="@color/colorIndexFont"
                android:textSize="12sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/colorDivider"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:onClick="checkUpdate">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/set_update"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/set_update"
                android:textColor="@color/colorIndexFont"
                android:textSize="12sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/colorDivider"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:onClick="aboutUs">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/set_about"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/set_about"
                android:textColor="@color/colorIndexFont"
                android:textSize="12sp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/set_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:onClick="logout">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/set_logout"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/logout"
                android:textColor="@color/colorIndexFont"
                android:textSize="12sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/colorDivider"/>
    </LinearLayout>

</LinearLayout>
