<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/charge_top"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/user_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:background="@drawable/user_center_bg">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:onClick="edit">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:background="@drawable/mess_bg">
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/shouhuo_edit"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:layout_marginLeft="2dp"
                        android:textSize="12sp"
                        android:textColor="@color/bg_white"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/shouhuo"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shouhuoren"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/colorIndexFont"
                            android:layout_marginRight="5dp"/>
                        <TextView
                            android:id="@+id/shouhuoren"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shouhuokong"
                            android:textColor="@color/colorIndexFont"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lianxifangshi"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/colorIndexFont"
                            android:layout_marginRight="5dp"/>
                        <TextView
                            android:id="@+id/lianxifangshi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shouhuokong"
                            android:textColor="@color/colorIndexFont"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shouhuo"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/colorIndexFont"
                            android:layout_marginRight="5dp"/>
                        <TextView
                            android:id="@+id/shouhuo_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shouhuokong"
                            android:textColor="@color/colorIndexFont"
                            android:textSize="12sp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
