<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/charge_top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/user_bg"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lltop"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:background="@drawable/user_center_bg"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:onClick="edit">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mess_bg"
                        android:padding="3dp"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="16dp"
                            android:src="@drawable/shouhuo_edit" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:text="@string/edit"
                            android:textColor="@color/bg_white"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/shouhuo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/shouhuoren"
                                android:textColor="@color/colorIndexFont"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/shouhuoren"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/shouhuokong"
                                android:textColor="@color/colorIndexFont"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/lianxifangshi"
                                android:textColor="@color/colorIndexFont"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/lianxifangshi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/shouhuokong"
                                android:textColor="@color/colorIndexFont"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/shouhuo"
                                android:textColor="@color/colorIndexFont"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/shouhuo_location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/shouhuokong"
                                android:textColor="@color/colorIndexFont"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rl_adreess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lltop">


            </android.support.v7.widget.RecyclerView>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:onClick="confirorder"
                android:layout_marginBottom="20dp"
                android:src="@drawable/confir_order" />
        </RelativeLayout>


    </ScrollView>


</LinearLayout>
